Nova estilização + cards de produtos

--- a/carrinho.html
+++ b/carrinho.html
@@ -28,7 +28,7 @@
          
  
           <ul class="menu" type="disc">
-                  <li class="opt" id ="but1"><a href="file:///C:/Users/gusta/source/repos/fazenda_corrego_do_meio/index.html">HOME</a></li>
+                  <li class="opt" id ="but1"><a href="file:///C:/Users/gusta/source/repos/indices-bioestatistica/Loja%20Fazenda/fazenda.html">HOME</a></li>
               <li class="opt" id ="but1"><a href=http://danielpinheiro.bio.br/>PEIXES</a></li>
             <li class="opt" id="but2">
               OVINOS
