Versão media query + menu responsivo

--- a/cebolinha.html
+++ b/cebolinha.html
@@ -8,37 +8,85 @@
     <title>Cebolinha Verde</title>
 </head>
 <body>
-     <header class="header">
+    <header class="header">
+      <div id="sky">
+        <h1 class="h">
+          Taxa de Entrega em Primavera do Leste e Poxoréo R$5,00
+        </h1>
+        <h1 class="h">Entrega a partir das 10:00hs da manhã</h1>
+        <h1 class="h"><a href="" class="h">Entenda como funciona!</a></h1>
+           <div id="flutuante"><img src="botao.svg" alt="" id="botaoflu">
+              <div id="menuflutuante">
+        <ul type="disc" id="menuflu" class="menu">
+          <li class="opt" id="but5">
+            <a
+              href="file:///C:/Users/gusta/source/repos/indices-bioestatistica/Loja%20Fazenda/fazenda.html"
+              >HOME</a
+            >
+          </li>
+          <li class="opt" id="but5">
+            <a href="http://danielpinheiro.bio.br">PEIXES</a>
+          </li>
+          <li class="opt" id="but5">OVINOS</li>
+          <li class="opt" id="but5">
+            <a href="http://danielpinheiro.bio.br/perfil.html">HORTALIÇAS</a>
+          </li>
+          <li class="opt" id="but5">
+            <a href="http://danielpinheiro.bio.br/perfil.html">AVES</a>
+          </li>
+          <li class="opt" id="but5">
+            <a href="http://danielpinheiro.bio.br/perfil.html">FRUTAS</a>
+          </li>
+          <li class="opt" id="but5">
+            <a href="http://danielpinheiro.bio.br/perfil.html"
+              >VERDURAS & LEGUMES</a
+            >
+          </li>
+        </ul>
+        </div>
+        </div>
+          </div>
+
       <div id="identification">
-           <img src="fazenda.svg" alt="fazenda" id="logo">
-           <h1 id="titulologo">Fazenda Córrego do Meio II</h1>
-           <div id="contato">
-             <h2 id="whatsapp">Faça seu Pedido pelo WhatsApp:</h2>
-                    <img src="iconwhats.svg" id="whats">
-                    <h2 id="number">(65)98146-0599</h2>
-                    </div>
-                    <img src="carrinho.svg" alt="" id="carrinhoverde">
-             	<button type="button" id="bucarrinho"><a href="carrinho.html" id="acarrinho">Carrinho de compras</a></button>
-             </div>
+        <img src="fazenda.svg" alt="fazenda" id="logo" />
+        <h1 id="titulologo">Fazenda Córrego do Meio II</h1>
+        <div id="contato">
+          <h2 id="whatsapp">Faça seu Pedido pelo WhatsApp:</h2>
+          <img src="iconwhats.svg" id="whats" />
+          <h2 id="number">(65)98146-0599</h2>
+        </div>
+
+        <a href="carrinho.html" id="bucarrinho"
+          ><img src="carrinho.svg" alt="" id="carrinhoverde" />Carrinho</a
+        >
+      </div>
       <div class="menubar">
         <nav id="menu1">
-            
-         
- 
           <ul class="menu" type="disc">
-                  <li class="opt" id ="but1"><a href="file:///C:/Users/gusta/source/repos/indices-bioestatistica/Loja%20Fazenda/fazenda.html">HOME</a></li>
-              <li class="opt" id ="but1"><a href=http://danielpinheiro.bio.br/>PEIXES</a></li>
-            <li class="opt" id="but2">
-              OVINOS
-              <ul>
-                <li class="opt1" id ="but3"><a href="http://danielpinheiro.bio.br/shannon.html">Índice de Shannon</a></li>
-                <li class="opt1" id ="but3"><a href="http://danielpinheiro.bio.br/simpson.html">Índice de Simpson</a></li>
-              </ul>
+            <li class="opt" id="but5">
+              <a
+                href="file:///C:/Users/gusta/source/repos/indices-bioestatistica/Loja%20Fazenda/fazenda.html"
+                >HOME</a
+              >
             </li>
-          <li  class="opt" id ="but5"><a href="http://danielpinheiro.bio.br/perfil.html">HORTALIÇAS</a></li>
-              <li  class="opt" id ="but5"><a href="http://danielpinheiro.bio.br/perfil.html">AVES</a></li>
-                  <li  class="opt" id ="but5"><a href="http://danielpinheiro.bio.br/perfil.html">FRUTAS</a></li>
-                      <li  class="opt" id ="but5"><a href="http://danielpinheiro.bio.br/perfil.html">VERDURAS & LEGUMES</a></li>
+            <li class="opt" id="but5">
+              <a href="http://danielpinheiro.bio.br">PEIXES</a>
+            </li>
+            <li class="opt" id="but5">OVINOS</li>
+            <li class="opt" id="but5">
+              <a href="http://danielpinheiro.bio.br/perfil.html">HORTALIÇAS</a>
+            </li>
+            <li class="opt" id="but5">
+              <a href="http://danielpinheiro.bio.br/perfil.html">AVES</a>
+            </li>
+            <li class="opt" id="but5">
+              <a href="http://danielpinheiro.bio.br/perfil.html">FRUTAS</a>
+            </li>
+            <li class="opt" id="but5">
+              <a href="http://danielpinheiro.bio.br/perfil.html"
+                >VERDURAS & LEGUMES</a
+              >
+            </li>
           </ul>
         </nav>
       </div>
