--- a/fazenda.html
+++ b/fazenda.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0 shrink-to-fit=no user-scalable=no"
+    />
     <title>Fazenda Córrego do Meio II</title>
     <link rel="stylesheet" href="fazenda.css" />
   </head>
@@ -15,37 +18,49 @@
         </h1>
         <h1 class="h">Entrega a partir das 10:00hs da manhã</h1>
         <h1 class="h"><a href="" class="h">Entenda como funciona!</a></h1>
-           <div id="flutuante"><img src="botao.svg" alt="" id="botaoflu">
-              <div id="menuflutuante">
-        <ul type="disc" id="menuflu" class="menu">
-          <li class="opt" id="but5">
-            <a
-              href="file:///C:/Users/gusta/source/repos/indices-bioestatistica/Loja%20Fazenda/fazenda.html"
-              >HOME</a
-            >
-          </li>
-          <li class="opt" id="but5">
-            <a href="http://danielpinheiro.bio.br">PEIXES</a>
-          </li>
-          <li class="opt" id="but5">OVINOS</li>
-          <li class="opt" id="but5">
-            <a href="http://danielpinheiro.bio.br/perfil.html">HORTALIÇAS</a>
-          </li>
-          <li class="opt" id="but5">
-            <a href="http://danielpinheiro.bio.br/perfil.html">AVES</a>
-          </li>
-          <li class="opt" id="but5">
-            <a href="http://danielpinheiro.bio.br/perfil.html">FRUTAS</a>
-          </li>
-          <li class="opt" id="but5">
-            <a href="http://danielpinheiro.bio.br/perfil.html"
-              >VERDURAS & LEGUMES</a
-            >
-          </li>
-        </ul>
-        </div>
-        </div>
+        <div id="flutuante">
+          <img src="botao.svg" alt="" id="botaoflu" />
+          <div id="menuflutuante">
+            <ul type="disc" id="menuflu" class="menu">
+              <li class="opt" id="but5">
+                <a
+                  href="file:///C:/Users/gusta/source/repos/indices-bioestatistica/Loja%20Fazenda/fazenda.html"
+                  >HOME</a
+                >
+              </li>
+              <li class="opt" id="but5">
+                <a href="http://danielpinheiro.bio.br">PEIXES</a>
+              </li>
+              <li class="opt" id="but5">OVINOS</li>
+              <li class="opt" id="but5">
+                <a href="http://danielpinheiro.bio.br/perfil.html"
+                  >HORTALIÇAS</a
+                >
+              </li>
+              <li class="opt" id="but5">
+                <a href="http://danielpinheiro.bio.br/perfil.html">AVES</a>
+              </li>
+              <li class="opt" id="but5">
+                <a href="http://danielpinheiro.bio.br/perfil.html">FRUTAS</a>
+              </li>
+              <li class="opt" id="but5">
+                <a href="http://danielpinheiro.bio.br/perfil.html"
+                  >VERDURAS & LEGUMES</a
+                >
+              </li>
+              <li>
+                <a href="carrinho.html" id="bucarrinho2" class="btn">
+                  <img
+                    src="carrinho.svg"
+                    alt=""
+                    id="carrinhoverde"
+                  />&nbsp;Carrinho</a
+                >
+              </li>
+            </ul>
           </div>
+        </div>
+      </div>
 
       <div id="identification">
         <img src="fazenda.svg" alt="fazenda" id="logo" />
